# zenobot

./: .gitignore  README.md  listener.py  listener_core.py  pyproject.toml  run_watcher.py
common/: mcap.py  misc.py  msg_utils.py
exchanges/: ftx_rest.py
listener/: functions.py  listener.py  listener_core.py  paragraphs.yaml  utils.py
mcap/: mcap.py
utils/: bot_debug.py  connection.py  mcap.py  misc.py  mongo.py  msg_utils.py
watcher/: cusum.py  utils.py
