[tool.poetry]
name = "zenobot"
version = "0.1.0"
description = ""
authors = ["nathandbrowne <nathan.browne1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
python-telegram-bot = "^13.11"
python-dotenv = "^0.19.2"
pymongo = {extras = ["srv"], version = "^4.0.2"}
ccxt = "^1.76.3"
pandas = "^1.4.1"
numpy = "^1.22.3"
colorama = "^0.4.4"
loguru = "^0.6.0"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
